@@ -13,7 +13,7 @@ The rules for this file:
   * release numbers follow "Semantic Versioning" http://semver.org
 
 ------------------------------------------------------------------------------
-??/??/?? richardjgowers, IAlibay, hmacdope
+??/??/?? richardjgowers, IAlibay, hmacdope, cbouy
 
   * 2.0.0
 
@@ -22,6 +22,12 @@ Fixes
     (Issues #2449, #2651)
 
 Enhancements
+  * Added the RDKitParser which creates a `core.topology.Topology` object from 
+    an `rdkit.Chem.rdchem.Mol` object, and the RDKitReader to read coordinates 
+    from RDKit conformers (Issue #2468, PR #2707)
+  * Added the `Aromaticities` topology attribute, and the `aromatic` selection 
+    token (Issue #2468, PR #2707)
+  * Added the `from_smiles` classmethod to the Universe (Issue #2468, PR #2707)
   * Added computation of Mean Squared Displacements (#2438, PR #2619)
 
 Changes
